--- a/client/src/pages/styles/PetCard.css
+++ b/client/src/pages/styles/PetCard.css
@@ -1,8 +1,10 @@
 .pet-card {
     position: relative;
     display: inline-block;
-    width: 300px;
-    height: 400px;
+    min-width: 300px;
+    min-height: 400px;
+
+    backdrop-filter: blur(20px);
 
     overflow: hidden;
 }
@@ -40,7 +42,7 @@
 
 .pet-info {
     position: absolute;
-    bottom: 60px;
+    bottom: 80px;
     left: 20px;
 }
 
@@ -58,12 +60,15 @@
 
 .pet-contact {
     position: absolute;
-    bottom: 15px;
+    bottom: 25px;
+    /* top: 2rem; */
+    /* padding: -10px 0; */
     left: 50%;
     transform: translateX(-50%);
 
     text-align: center;
-    max-width: 80%;
+    width: 90%;
+    opacity: 0.8;
 
     font-size: 0.8rem;
     font-weight: 400;
